--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,5 +18,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
+    - name: Build all features
+      run: cargo build --verbose --all-features
     - name: Run tests
       run: cargo test --verbose
+    - name: Run tests all features
+      run: cargo test --verbose --all-features
