--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,11 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
+    - name: Build no default features
       run: cargo build --verbose --no-default-features
     - name: Build all features
       run: cargo build --verbose --all-features
-    - name: Run tests
+    - name: Run tests no default features
       run: cargo test --verbose --no-default-features
     - name: Run tests all features
       run: cargo test --verbose --all-features
