--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "prosto"
-version = "0.6.4-alpha.0"
+version = "0.6.4"
 authors = ["Andrey Kuznetsov <fear@loathing.in>"]
 edition = "2018"
 license-file = "LICENSE.txt"
